# ai-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
crates/ai-memory-cli/src/: cli.rs  http_client.rs
crates/ai-memory-cli/src/commands/: install_hooks.rs  render_shared.rs  search.rs  serve.rs  uninstall.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: uninstall.rs
crates/ai-memory-consolidate/src/: consolidator.rs
crates/ai-memory-core/src/: ids.rs
crates/ai-memory-hooks/src/: payload.rs  router.rs
crates/ai-memory-llm/: Cargo.toml
crates/ai-memory-llm/src/: factory.rs
crates/ai-memory-llm/tests/: anthropic_base_url.rs
crates/ai-memory-mcp/: Cargo.toml
crates/ai-memory-mcp/src/: admin.rs  server.rs
crates/ai-memory-mcp/tests/: admin_backup.rs  admin_bootstrap.rs  admin_phase3.rs  admin_purge.rs  admin_rename.rs  admin_status_search.rs  admin_write_page.rs
crates/ai-memory-store/src/: lib.rs  ops.rs  reader.rs
crates/ai-memory-web/: Cargo.toml  build.rs
crates/ai-memory-web/src/: markdown.rs
docker/: .env.example  Dockerfile  docker-compose.yml
docker/claude-shim/: Cargo.toml  Dockerfile  README.md
docker/claude-shim/src/: anthropic.rs  claude.rs  lib.rs  main.rs  translate.rs
docker/claude-shim/tests/: integration.rs
docs/: ARCHITECTURE.md  deploy.md  install.md  llm-provider-comparison.md  mcp-install.md  usage.md
hooks/: _lib.sh
hooks/antigravity-cli/: pre-tool-use.ps1  pre-tool-use.sh
hooks/lib/: ai-memory-hook.ps1
tests/hooks/: test_lib.sh
(+1 files in other folders)
